--- a/Quantitative_Risk_Management.ipynb
+++ b/Quantitative_Risk_Management.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "scrolled": false
    },
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -340,7 +340,7 @@
        "1.3831731143911365"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,12 +394,16 @@
     "    mu = np.mean(data)\n",
     "    sigma = np.std(data)\n",
     "    \n",
-    "    return (1 - alpha)** -1 * st.norm.pdf(st.norm.ppf(alpha))*sigma - mu"
+    "    return (1 - alpha)** -1 * st.norm.pdf(st.norm.ppf(alpha))*sigma - mu\n",
+    "\n",
+    "#Define Value at Risk\n",
+    "def var(alpha, data):\n",
+    "    return - (np.mean(data) - st.norm.ppf(alpha) * np.std(data))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +441,7 @@
        "      <th>SPX</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Conf. Lvl</th>\n",
+       "      <th>Exp. SF</th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "    </tr>\n",
@@ -445,51 +449,138 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>90%</th>\n",
-       "      <td>0.000514</td>\n",
-       "      <td>0.000758</td>\n",
+       "      <td>0.000563</td>\n",
+       "      <td>0.000808</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>95%</th>\n",
-       "      <td>-0.000099</td>\n",
-       "      <td>0.000216</td>\n",
+       "      <td>-0.000045</td>\n",
+       "      <td>0.000271</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>99%</th>\n",
-       "      <td>-0.000678</td>\n",
-       "      <td>-0.000297</td>\n",
+       "      <td>-0.000618</td>\n",
+       "      <td>-0.000236</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "              MXEUC       SPX\n",
-       "Conf. Lvl                    \n",
-       "90%        0.000514  0.000758\n",
-       "95%       -0.000099  0.000216\n",
-       "99%       -0.000678 -0.000297"
+       "            MXEUC       SPX\n",
+       "Exp. SF                    \n",
+       "90%      0.000563  0.000808\n",
+       "95%     -0.000045  0.000271\n",
+       "99%     -0.000618 -0.000236"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "output = output = dict.fromkeys(['MXEUC','SPX'])\n",
+    "output_EF = dict.fromkeys(['MXEUC','SPX'])\n",
     "\n",
     "#Calculate the Expected Short Fall for MXEUC\n",
-    "output['MXEUC'] = [exp_shortfall(0.1, random_return_series[0]), \n",
+    "output_EF['MXEUC'] = [exp_shortfall(0.1, random_return_series[0]), \n",
     "                   exp_shortfall(0.05, random_return_series[0]),\n",
     "                   exp_shortfall(0.01, random_return_series[0])]\n",
     "\n",
-    "output['SPX'] =  [exp_shortfall(0.1, random_return_series[1]), \n",
+    "#Calculate the Expected Short Fall for SPX\n",
+    "output_EF['SPX'] =  [exp_shortfall(0.1, random_return_series[1]), \n",
     "                   exp_shortfall(0.05, random_return_series[1]),\n",
     "                   exp_shortfall(0.01, random_return_series[1])]\n",
     "\n",
-    "output_table = pd.DataFrame(output, index = ['90%', '95%', '99%'])\n",
-    "output_table.index.name = 'Conf. Lvl'\n",
-    "output_table       "
+    "output_table_EF = pd.DataFrame(output_EF, index = ['90%', '95%', '99%'])\n",
+    "output_table_EF.index.name = 'Exp. SF'\n",
+    "output_table_EF       "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>MXEUC</th>\n",
+       "      <th>SPX</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>VAR</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>90%</th>\n",
+       "      <td>-0.009807</td>\n",
+       "      <td>-0.008362</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95%</th>\n",
+       "      <td>-0.012359</td>\n",
+       "      <td>-0.010619</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99%</th>\n",
+       "      <td>-0.017145</td>\n",
+       "      <td>-0.014851</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        MXEUC       SPX\n",
+       "VAR                    \n",
+       "90% -0.009807 -0.008362\n",
+       "95% -0.012359 -0.010619\n",
+       "99% -0.017145 -0.014851"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output_VAR = dict.fromkeys(['MXEUC','SPX'])\n",
+    "\n",
+    "#Calculate the Value at Risk Fall for MXEUC\n",
+    "output_VAR['MXEUC'] = [var(0.1, random_return_series[0]), \n",
+    "                   var(0.05, random_return_series[0]),\n",
+    "                   var(0.01, random_return_series[0])]\n",
+    "\n",
+    "#Calculate the Value at Risk Fall for SPX\n",
+    "output_VAR['SPX'] =  [var(0.1, random_return_series[1]), \n",
+    "                   var(0.05, random_return_series[1]),\n",
+    "                   var(0.01, random_return_series[1])]\n",
+    "\n",
+    "output_table_VAR = pd.DataFrame(output_VAR, index = ['90%', '95%', '99%'])\n",
+    "output_table_VAR.index.name = 'VAR'\n",
+    "output_table_VAR       "
    ]
   },
   {
@@ -503,17 +594,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10000\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
