--- a/Quantitative_Risk_Management.ipynb
+++ b/Quantitative_Risk_Management.ipynb
@@ -1157,15 +1157,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model 4: The Var was violated  117  times which is  3.45  Percent\n",
-      "This is not surprising since a gaussian tends to underestimate tail behaviour of assets returns.\n"
+      "Model 4: The Var was violated  117  times which is  3.45  Percent\n"
      ]
     }
    ],
@@ -1178,8 +1177,7 @@
     "        count += 1  \n",
     "        loc.append(i)\n",
     "        \n",
-    "print('Model 4: The Var was violated ',count,' times which is ',round(count/len(rw_var)*100,2),' Percent')\n",
-    "print('This is not surprising since a gaussian tends to underestimate tail behaviour of assets returns.')"
+    "print('Model 4: The Var was violated ',count,' times which is ',round(count/len(rw_var)*100,2),' Percent')"
    ]
   },
   {
